tests/variant_amount/fail/not_enum.stderr
error: expected `enum`
 --> tests/variant_amount/fail/not_enum.rs:4:1
  |
4 | struct S {
  | ^^^^^^

error: expected `enum`
  --> tests/variant_amount/fail/not_enum.rs:10:1
   |
10 | union U {
   | ^^^^^
